--- a/README
+++ b/README
@@ -13,4 +13,7 @@ I know it's probably a stupid simple project, but I am proud that I was able to 
 I plan on trying also doing this project in SQLite soon.
 
 Thank you for taking the time to see and read this.
- 
+
+UPDATE1/11/25
+
+ I ADDED THE PROJECT IN A JUPYER NOTEBOOK FORMAT AND ALSO CREATED A POWERPOINT PRESENTATION SO ANYONE NOT TECH SAVY CAN SEE WHAT I WAS ACCOMPLISHING WITH MY PROJECT
